public class Main {

    public static void main (String args[]){

Foodie foodie = new Foodie();
foodie.startDialog();


    }
}
