@startuml
'https://plantuml.com/object-diagram

class Main{
+ static void main(string [] args)
}

class StartMenu{
- String userName
- String userPassword
- String address
- List<User> registeredUsers = new LinkedList<>()
- TextUI ui
- FileIO io
+ StartMenu()
+ void CreateUser()
+ User Login()
}

class User{
- String userName
- String userPassword
- String address;
- ArrayList <String> orders = new ArrayList<>()
- Cart cart = new Cart()
+ User(String userName,String userPassword,String address)
+ String getUserName()
+ String getUserPassword()
+ List<String> getOrders()
+ void displayOrder()
+ void addOrder(String order)
+ String getAddress()
+ String toString()
}


class Cart{
- Random rand = new Random()
- int deliveryPrice
- int totalPrice
- double randNum = Math.random()/2
+ Cart()
+ void calculateTotalPrice()
+ void calculateDeliveryPrice()
+ int getDeliveryPrice()
+ int getTotalPrice()
+ boolean giveDiscount()
+ double randomDiscount()
}

 class Restaurant{
- String restaurantName
- String category
- String rating
- String deliveryPrice
- List<Drink> drinksList
- List<Food> foodList
- List <Dessert> dessertList
+ Restaurant(String restaurantName, String category, String rating, List<Food> foodList, List<Drinks>drinksList, List <Dessert> dessertList, String deliveryPrice)
+ String getRestaurantName()
+ String getCategory()
+ void displayFoodList()
+ void displayDrinksList()
+ void displayDesserList()
+ String toString()
}

class Foodie{
- TextUI ui
- FileIO io
- Cart cart = new cart()
- StartMenu startMenu = new StartMenu()
- User currentUser
- List<Restaurant> restaurantList = new ArrayList<>()
+ void SetUp()
+ void startDialog()
+ void chooseRestaurantDialog()
+ void searchForCategory()
+ void searchForRestuarantName()
+ void choice(String chooseRestaurant)
}

class Food{
- String name;
+ Food(String name)
+ String getName()
+ void setName()
+ String toString()
}

class Drinks{
- String name;
+ Drinks(String name)
+ String getName()
+ void setName()
+ String toString()
}

class Dessert{
- String name;
+ Dessert(String name)
+ String getName()
+ void setName()
+ String toString()
}


class TextUI{
+ String getInput(String msg)
+ void displayMessage(String msg)
+ void displayRestuarantList(List<Restaurant> in)
}

class FileIO{
+ List<User> readUserData()
+ void saveUserData (List<User> users)
+ void saveOrders (User user)
+ List<Restaurant> readRestuarantData()
}


Main o-- StartMenu

StartMenu o-- TextUI
StartMenu o-- FileIO
StartMenu o-- User
StartMenu *-- Foodie

Foodie *-- Restaurant

Restaurant o-- Cart

User o-- Cart

Restaurant *-- Food
Restaurant *-- Drinks
Restaurant *-- Dessert

@enduml

